--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+/* App.css */
+/* Crea un contenedor para aplicar el desenfoque y el color de fondo */
+body {
+  /* Fondo de imagen y color estático */
+  background: url('./background.webp') no-repeat center center fixed;
+  background-size: cover; /* Asegúrate de que la imagen cubra todo el fondo */
+  position: relative; /* Necesario para posicionar el pseudo-elemento */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  border-collapse: collapse;
+  width: 80%; /* Reduce el ancho de la tabla */
+  margin: 20px auto; /* Centra la tabla */
+  box-shadow: 0 2px 3px rgb(228, 99, 0);
+  background-color: rgba(255, 255, 255, 0.974); /* Fondo de color gris con opacidad */
+  color: #000000; /* Texto de color negro */
+  border-radius: 8px; /* Esquinas redondeadas */
+  overflow: hidden; /* Asegura que las esquinas del contenido también sean redondeadas */
+  filter: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th, td {
+  border: 2px solid #ff9800; /* Bordes naranjas por defecto */
+  padding: 12px; /* Aumenté el padding para más espacio */
+  text-align: left; /* Asegura que el texto esté alineado a la izquierda */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+th {
+  background-color: rgba(233, 109, 0, 0.8); /* Fondo más oscuro para los encabezados con opacidad por defecto */
+  font-weight: bold; /* Hace el texto del encabezado más destacado */
+}
+/* Estilos generales para tablas */
+th, td {
+  border: 2px solid #ff9800; /* Bordes naranjas por defecto */
+  padding: 12px; /* Espacio adicional en las celdas */
+  text-align: left; /* Alinea el texto a la izquierda */
 }
 
-.App-link {
-  color: #61dafb;
+/* Estilos para encabezados de tabla */
+th {
+  background-color: rgba(233, 109, 0, 0.8); /* Fondo más oscuro para encabezados por defecto */
+  font-weight: bold; /* Destaca el texto del encabezado */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Estilos para el título h2 por defecto */
+h2 {
+  text-align: center; /* Centra el título */
+  margin-top: 40px; /* Espacio encima del título */
+  margin-bottom: 20px; /* Espacio debajo del título */
+  font-size: 2em; /* Tamaño de la fuente del título */
+  color: #ff7300; /* Color del título por defecto */
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6); /* Sombra del texto para mejorar la legibilidad */
+}
+
+/* Estilos para el título h2 con la clase "ninas" */
+h2.ninas {
+  color: #ff7300; /* Color naranjo */
+}
+
+/* Estilos para el título h2 con la clase "ninos" */
+h2.ninos {
+  color: #4caf50; /* Color verde para los títulos con "niños" */
+}
+
+/* Estilos para tablas con la clase "ninas" */
+table.ninas th, table.ninas td {
+  border: 2px solid #ff7300; /* Bordes naranjas para tablas de "niñas" */
+}
+
+table.ninas th {
+  background-color: rgba(233, 109, 0, 0.8); /* Fondo más oscuro para encabezados de "niñas" */
+}
+
+/* Estilos para tablas con la clase "ninos" */
+table.ninos th, table.ninos td {
+  border: 2px solid #4caf50; /* Bordes verdes para tablas de "niños" */
+}
+
+table.ninos th {
+  background-color: rgba(76, 175, 80, 0.8); /* Fondo verde para encabezados de "niños" */
+}
+
+/* Estilos para filas de tabla al pasar el ratón */
+tbody tr:hover {
+  background-color: rgba(43, 225, 61, 0.221); /* Fondo más claro al pasar el ratón con opacidad */
+  transition: background-color 0.3s ease; /* Transición suave del color de fondo */
 }
