--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,19 @@ h2 {
   margin-top: 40px;
   margin-bottom: 20px;
   font-size: 2em;
-  color: #ff7300;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+  color: #690073;
+  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.6);
+}
+
+/* Estilos para el título h1 */
+h3 {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 3em;
+  color: #690073;
+  text-shadow: 2px 2px 2px rgba(255, 189, 255, 0.6);
+  font-family: "Playwrite AR", cursive;
 }
 
 /* Estilos específicos para "niñas" */
