--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ html, body {
 /* Estilos para el fondo de la página de login */
 .login-container {
     position: fixed; /* Asegura que ocupa toda la ventana */
-    top: 0;
+    top: 10%;
     left: 0;
     width: 100%;
     height: 100%; /* Ocupa el 100% del alto de la vista */
@@ -205,60 +205,126 @@ text-shadow: 2px 2px 2px rgba(255, 189, 255, 0.6);
 font-family: "Playwrite AR", cursive;
 }
 
-/* Estilos específicos para "niñas" */
-h2.ninas {
-color: #ff7300;
+/* Estilos para la barra de navegación */
+.navbar {
+  font-family: Arial, sans-serif;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 8px;
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  position: fixed;
+  z-index: 1100;
+  top: 0;
+  left: 0;
+  color: #fff; /* Color del texto */
 }
 
-/* Estilos para la barra de navegación */
+/* En tu archivo CSS */
+.MuiAppBar-root {
+  background-color: #ab9ef5; /* Color sólido, sin transparencia */
+  padding: 0px;
+}
+
+.MuiAppBar-elevation4 {
+  box-shadow: none; /* Elimina la sombra de la elevación */
+}
+
+.MuiPaper-root.MuiAppBar-root {
+  background-color: #ab9ef5; /* Color sólido, sin transparencia */
+  padding: 0px;
+}
+
+.MuiPaper-elevation4 {
+  box-shadow: none; /* Elimina la sombra para un color sólido */
+}
+
+/* Ajustes para los enlaces en la barra de navegación */
 .navbar a {
-color: #fcfcfc;
-text-decoration: none;
-margin: 0 10px;
+  color: #fcfcfc;
+  text-decoration: none;
+  margin: 0 10px;
+  display: inline-block;
 }
 
 .navbar a:hover {
-color: #d900ff;
+  color: #d900ff;
 }
 
+/* Ajustes para el contenedor de la barra de herramientas */
 .navbar .toolbar {
-background-color: #d6aaffc5;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px; /* Añade un poco de espacio alrededor */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  white-space: nowrap;
 }
 
+/* Ajustes para el ícono de la aplicación */
 .app-icon {
-margin-right: 10px;
-width: 60px; /* Ajusta el tamaño de la imagen según tus necesidades */
-height: 60px; /* Mantén la proporción si es necesario */
+  margin-right: 10px;
+  width: 60px;
+  height: 60px;
 }
 
+/* Ajustes para el título de la aplicación */
 .app-title {
-flex-grow: 1; /* Esto hace que el título ocupe el espacio restante disponible */
-font-size: 24px; /* Ajusta el tamaño de la fuente según sea necesario */
+  flex-grow: 1;
+  font-size: 24px;
 }
 
+/* Ajustes para los botones de navegación */
 .nav-buttons {
-display: flex;
+  display: flex;
+  align-items: center;
 }
 
-/* Estilo para el icono de carga */
-.icon-loading {
-width: 100px; /* Ajusta el tamaño del icono */
-height: 100px; /* Ajusta el tamaño del icono */
-margin: 0 auto;
-display: block;
-animation: spin 2s linear infinite; /* Gira el icono */
-}
-
+/* Ajustes para el ícono NutriTrust */
 .nutritrust-icon {
-width: 50px; /* Ajusta el tamaño de la imagen según tus necesidades */
-height: 50px; /* Mantén la proporción si es necesario */
+  width: 50px;
+  height: 50px;
 }
 
-  /* Contenedor principal del carrito */
+/* Media Queries para dispositivos móviles */
+@media (max-width: 768px) {
+  .app-title {
+    font-size: 20px;
+  }
+
+  .nav-buttons {
+    border: none; /* Eliminar bordes si no quieres bordes visibles */
+    margin: 0; /* Asegúrate de que no haya margen alrededor del botón */
+    display: inline-block; /* Asegúrate de que el botón no ocupe más espacio del necesario */
+    text-align: center; /* Alinea el texto al centro del botón */
+    color: #fff; /* Color del texto, si es necesario */
+    font-size: 16px; /* Tamaño de la fuente del texto */
+    border-radius: 4px; /* Opcional: Bordes redondeados */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+  }
+
+  .app-icon, .nutritrust-icon {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .app-title {
+    font-size: 18px;
+  }
+  
+  .app-icon, .nutritrust-icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+/* Contenedor principal del carrito */
 .cart-container {
   padding: 2% 4%; /* Padding en porcentajes */
   max-width: 90%; /* Ancho máximo en porcentaje */
@@ -356,8 +422,7 @@ height: 50px; /* Mantén la proporción si es necesario */
   background-color: #2980b9;
 }
 
-/* style.css */
-/* style.css */
+/* formev*/
 
 .formev {
   display: grid;
